--- a/Java2048/pom.xml
+++ b/Java2048/pom.xml
@@ -27,6 +27,22 @@
   </dependencies>
 
   <build>
+  <resources>
+  <resource>
+  <directory>src/main/java/com/Java2048/app/GFX</directory>
+  <includes>
+  <include>**/*.java</include>
+  </includes>
+  </resource>
+
+  <resource>
+  <directory>src/main/java/com/Java2048/app/Util</directory>
+  <includes>
+  <include>**/*.java</include>
+  </includes>
+  </resource>
+
+  </resources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
