--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 # Maven build target
 /Java2048/target
-/vscode
+
 # Log file
 *.log
 
@@ -24,3 +24,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.vscode/settings.json
